--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.3.10.RELEASE'
+    id 'org.springframework.boot' version '2.4.10'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
 
 allprojects {
-    group 'poli.cinema'
-    version '1.0'
+    group = 'poli.cinema'
+    version = '1.0'
     sourceCompatibility = JavaVersion.VERSION_1_8
 
     repositories {
