--- a/showtime-service/build.gradle
+++ b/showtime-service/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.3.10.RELEASE'
 
